// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile ah huge 1`] = `
<Link
  linkStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": 10,
      "paddingRight": 15,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    fill={true}
    resizeMode="cover"
    rounded={true}
    style={
      Object {
        "marginBottom": 5,
        "overflow": "hidden",
        "width": 97,
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 45,
          "fontWeight": "400",
          "lineHeight": 45,
          "marginBottom": 0,
          "paddingBottom": 10,
          "paddingTop": 5,
          "textAlign": "center",
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesDigitalW04-Regular",
          "fontSize": 14,
          "lineHeight": 20,
          "paddingBottom": 0,
          "textAlign": "center",
        }
      }
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`tile ah medium 1`] = `
<Link
  linkStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": 10,
      "paddingRight": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    fill={true}
    resizeMode="cover"
    rounded={true}
    style={
      Object {
        "marginBottom": 5,
        "overflow": "hidden",
        "width": 97,
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 30,
          "fontWeight": "400",
          "lineHeight": 30,
          "marginBottom": 0,
          "paddingBottom": 10,
          "paddingTop": 5,
          "textAlign": "center",
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesDigitalW04-Regular",
          "fontSize": 14,
          "lineHeight": 20,
          "paddingBottom": 0,
          "textAlign": "center",
        }
      }
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`tile ah wide 1`] = `
<Link
  linkStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": 10,
      "paddingRight": 15,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    fill={true}
    resizeMode="cover"
    rounded={true}
    style={
      Object {
        "marginBottom": 5,
        "overflow": "hidden",
        "width": 97,
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 40,
          "fontWeight": "400",
          "lineHeight": 40,
          "marginBottom": 0,
          "paddingBottom": 10,
          "paddingTop": 5,
          "textAlign": "center",
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesDigitalW04-Regular",
          "fontSize": 14,
          "lineHeight": 20,
          "paddingBottom": 0,
          "textAlign": "center",
        }
      }
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;

exports[`tile ah without breakpoint should be like medium 1`] = `
<Link
  linkStyle={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
      "padding": 10,
      "paddingRight": 10,
    }
  }
  url="/article/123"
>
  <Image
    aspectRatio={1}
    fill={true}
    resizeMode="cover"
    rounded={true}
    style={
      Object {
        "marginBottom": 5,
        "overflow": "hidden",
        "width": 97,
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 5,
        }
      }
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 30,
          "fontWeight": "400",
          "lineHeight": 30,
          "marginBottom": 0,
          "paddingBottom": 10,
          "paddingTop": 5,
          "textAlign": "center",
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      accessibilityRole="header"
      aria-level="4"
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesDigitalW04-Regular",
          "fontSize": 14,
          "lineHeight": 20,
          "paddingBottom": 0,
          "textAlign": "center",
        }
      }
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
    />
  </View>
</Link>
`;
